Minor styling fixes for dark mode

--- a/display/shared/styling/themes/dark-theme.css
+++ b/display/shared/styling/themes/dark-theme.css
@@ -275,6 +275,6 @@
 .dark-theme .system-rollable:hover,
 .dark-theme .system-rollable:focus {
   cursor: pointer;
-  text-shadow: 0 0 10px #000;
+  text-shadow: 0 0 10px #ffffff;
   color: #f7f7f7;
 }
