--- a/display/shared/styling/wod5e.css
+++ b/display/shared/styling/wod5e.css
@@ -468,7 +468,6 @@ p .collapsible-content{
 
 .wod5e .collapsible:hover,
 .wod5e .collapsible:focus {
-    color: #000;
     cursor: pointer;
 }
 
